src/main/java/com/example/coursemanagement/services/exceptions/errors/ForbiddenException.java
package com.example.coursemanagement.services.exceptions.errors;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String message) {
        super(message);
    }
}
